// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-actable-predictive destination: sendCustomEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "csv&z*lP9Err",
      "properties": Object {
        "testType": "csv&z*lP9Err",
      },
      "stream_key": "csv&z*lP9Err",
      "timestamp": 1612137600,
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendCustomEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "csv&z*lP9Err",
      "properties": Object {
        "testType": "csv&z*lP9Err",
      },
      "stream_key": "csv&z*lP9Err",
      "timestamp": 1612137600,
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendEmailEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "campaign_name": "G(YHQeA1KuuS",
      "clicked_flag": -691825576771584,
      "customer_id": "G(YHQeA1KuuS",
      "date_email_sent": 1612137600,
      "opened_flag": -691825576771584,
      "stream_key": "G(YHQeA1KuuS",
      "unsub_flag": -691825576771584,
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendEmailEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "G(YHQeA1KuuS",
      "date_email_sent": 1612137600,
      "stream_key": "G(YHQeA1KuuS",
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendTransactionEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "4e^Txj",
      "discount_code": "4e^Txj",
      "product_column": "",
      "purchase_datetime": 1612137600,
      "spend": -77094252844154.88,
      "stream_key": "4e^Txj",
      "transaction_id": "4e^Txj",
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendTransactionEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "4e^Txj",
      "discount_code": "",
      "product_column": "",
      "purchase_datetime": 1612137600,
      "stream_key": "4e^Txj",
      "transaction_id": "4e^Txj",
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendWebEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "!]z)sWib3^(Yr(V)X",
      "datetime": 1612137600,
      "interaction_type": "!]z)sWib3^(Yr(V)X",
      "stream_key": "!]z)sWib3^(Yr(V)X",
      "utm_campaign": "!]z)sWib3^(Yr(V)X",
      "utm_medium": "!]z)sWib3^(Yr(V)X",
      "utm_source": "!]z)sWib3^(Yr(V)X",
    },
  ],
}
`;

exports[`Testing snapshot for actions-actable-predictive destination: sendWebEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "!]z)sWib3^(Yr(V)X",
      "datetime": 1612137600,
      "interaction_type": "!]z)sWib3^(Yr(V)X",
      "stream_key": "!]z)sWib3^(Yr(V)X",
    },
  ],
}
`;
